[gd_scene format=3 uid="uid://bkteth5stoprm"]

[ext_resource type="Script" uid="uid://b4aeeb7t1hxm1" path="res://assets/top-down/scripts/top-down-character-controller.gd" id="1_md32d"]
[ext_resource type="PackedScene" uid="uid://dfcc0yqynb36c" path="res://assets/mixamo-animations/sources/y-bot.tscn" id="2_61lqt"]
[ext_resource type="PackedScene" uid="uid://d2xyvxp07r6l6" path="res://assets/mixamo-animations/sources/x-bot.tscn" id="3_2xw3j"]
[ext_resource type="AnimationLibrary" uid="uid://bb6cd872gipbq" path="res://assets/quaternius-universal-animation-library/sources/AnimationLibrary_Godot_Standard.glb" id="4_qtv00"]
[ext_resource type="AnimationLibrary" uid="uid://ck0vo05mv388x" path="res://assets/mixamo-animations/animations/mixamo-basic-locomotion.fbx" id="5_dnd5e"]
[ext_resource type="AnimationLibrary" uid="uid://biormxvfu2doo" path="res://assets/mixamo-animations/animations/mixamo-climb-hang.fbx" id="6_i35f6"]
[ext_resource type="Script" uid="uid://dbkpemnstw6yw" path="res://assets/top-down/scripts/top-down-input-controller.gd" id="8_56epr"]
[ext_resource type="Script" uid="uid://bkvfeu81k76ui" path="res://assets/top-down/scripts/top-down-animation-controller.gd" id="9_0cp26"]
[ext_resource type="Script" uid="uid://cexyexcdm444k" path="res://assets/top-down/scripts/interaction-controller.gd" id="9_hwv1k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yigcl"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_34ei5"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Door Opening - Start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7qmds"]
animation = &"mixamo-climb-hang/Climb-Hang|Climbing Down Wall - In Place"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_llm3e"]
animation = &"mixamo-climb-hang/Climb-Hang|Climbing Up Wall - In Place"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_105eb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7qmds")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_llm3e")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_jlw5x"]
filter_enabled = true
filters = ["%GeneralSkeleton:Chest", "%GeneralSkeleton:Head", "%GeneralSkeleton:LeftHand", "%GeneralSkeleton:LeftIndexDistal", "%GeneralSkeleton:LeftIndexIntermediate", "%GeneralSkeleton:LeftIndexProximal", "%GeneralSkeleton:LeftLittleDistal", "%GeneralSkeleton:LeftLittleIntermediate", "%GeneralSkeleton:LeftLittleProximal", "%GeneralSkeleton:LeftLowerArm", "%GeneralSkeleton:LeftMiddleDistal", "%GeneralSkeleton:LeftMiddleIntermediate", "%GeneralSkeleton:LeftMiddleProximal", "%GeneralSkeleton:LeftRingDistal", "%GeneralSkeleton:LeftRingIntermediate", "%GeneralSkeleton:LeftRingProximal", "%GeneralSkeleton:LeftShoulder", "%GeneralSkeleton:LeftThumbDistal", "%GeneralSkeleton:LeftThumbMetacarpal", "%GeneralSkeleton:LeftThumbProximal", "%GeneralSkeleton:LeftUpperArm", "%GeneralSkeleton:Neck", "%GeneralSkeleton:RightHand", "%GeneralSkeleton:RightIndexDistal", "%GeneralSkeleton:RightIndexIntermediate", "%GeneralSkeleton:RightIndexProximal", "%GeneralSkeleton:RightLittleDistal", "%GeneralSkeleton:RightLittleIntermediate", "%GeneralSkeleton:RightLittleProximal", "%GeneralSkeleton:RightLowerArm", "%GeneralSkeleton:RightMiddleDistal", "%GeneralSkeleton:RightMiddleIntermediate", "%GeneralSkeleton:RightMiddleProximal", "%GeneralSkeleton:RightRingDistal", "%GeneralSkeleton:RightRingIntermediate", "%GeneralSkeleton:RightRingProximal", "%GeneralSkeleton:RightShoulder", "%GeneralSkeleton:RightThumbDistal", "%GeneralSkeleton:RightThumbMetacarpal", "%GeneralSkeleton:RightThumbProximal", "%GeneralSkeleton:RightUpperArm", "%GeneralSkeleton:Spine", "%GeneralSkeleton:UpperChest", "%GeneralSkeleton:mixamorig_LeftHandIndex1", "%GeneralSkeleton:mixamorig_LeftHandMiddle1", "%GeneralSkeleton:mixamorig_LeftHandPinky1", "%GeneralSkeleton:mixamorig_LeftHandRing1", "%GeneralSkeleton:mixamorig_LeftHandThumb1", "%GeneralSkeleton:mixamorig_RightHandIndex1", "%GeneralSkeleton:mixamorig_RightHandMiddle1", "%GeneralSkeleton:mixamorig_RightHandPinky1", "%GeneralSkeleton:mixamorig_RightHandRing1", "%GeneralSkeleton:mixamorig_RightHandThumb1"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_t1qpm"]
xfade_time = 0.2
input_0/name = "idle_state"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "walking_state"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "running_state"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "on_air_state"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true
input_4/name = "crouch_state"
input_4/auto_advance = false
input_4/break_loop_at_end = false
input_4/reset = true
input_5/name = "climbing_state"
input_5/auto_advance = false
input_5/break_loop_at_end = false
input_5/reset = true

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_ly6k1"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_iy0an"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_u5c7k"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_61lqt"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_63khx"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_lgwli"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_4yhe2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2xw3j"]
animation = &"AnimationLibrary_Godot_Standard/Crouch_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qtv00"]
animation = &"AnimationLibrary_Godot_Standard/Crouch_Fwd"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dnd5e"]
animation = &"AnimationLibrary_Godot_Standard/Crouch_Fwd"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i35f6"]
animation = &"AnimationLibrary_Godot_Standard/Crouch_Fwd"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ue1hl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2xw3j")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_qtv00")
blend_point_1/pos = 0.0
blend_point_2/node = SubResource("AnimationNodeAnimation_dnd5e")
blend_point_2/pos = 0.0
blend_point_3/node = SubResource("AnimationNodeAnimation_i35f6")
blend_point_3/pos = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dpkmr"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Hard Landing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lbadu"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Idle 1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d3pxj"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Catwalk Idle Twist R"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_36lu1"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Catwalk Idle Twist L"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ftpw8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lbadu")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_d3pxj")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_36lu1")
blend_point_2/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_105eb"]
animation = &"AnimationLibrary_Godot_Standard/Jump_Land"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_yplme"]
fadein_time = 0.05
fadeout_time = 0.2

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_2swil"]
fadein_time = 0.2
fadeout_time = 0.3

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ikmx2"]
animation = &"AnimationLibrary_Godot_Standard/Jump"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_7qmds"]
fadein_time = 0.2
fadeout_time = 0.01

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ly6k1"]
animation = &"mixamo-climb-hang/Climb-Hang|Braced Hang To Crouch"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_hagjg"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a2we3"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_51wg0"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Right Forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mt58l"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7qoi7"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Right Backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6m5u0"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4vihu"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Left Backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rlxjl"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3swhb"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Jogging Left Forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pqkcu"]
animation = &"AnimationLibrary_Godot_Standard/Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_o3oay"]
blend_point_0/node = SubResource("AnimationNodeAnimation_a2we3")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_51wg0")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_mt58l")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_7qoi7")
blend_point_3/pos = Vector2(1, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_6m5u0")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_4vihu")
blend_point_5/pos = Vector2(-1, -1)
blend_point_6/node = SubResource("AnimationNodeAnimation_rlxjl")
blend_point_6/pos = Vector2(-1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_3swhb")
blend_point_7/pos = Vector2(-1, 1)
blend_point_8/node = SubResource("AnimationNodeAnimation_pqkcu")
blend_point_8/pos = Vector2(0, 0)
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1tmok"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Walking Forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uqegx"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Walking Backwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_krlnp"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Right Strafe Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gd55j"]
animation = &"mixamo-basic-locomotion/Basic Locomotion|Left Strafe Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pxxee"]
animation = &"AnimationLibrary_Godot_Standard/Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_d5vtv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1tmok")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_uqegx")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_krlnp")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_gd55j")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_pxxee")
blend_point_4/pos = Vector2(0, 0)
snap = Vector2(0.01, 0.01)
sync = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k3gqr"]
nodes/output/position = Vector2(1720, -70)
nodes/Animation/node = SubResource("AnimationNodeAnimation_34ei5")
nodes/Animation/position = Vector2(-350, -250)
nodes/Climbing/node = SubResource("AnimationNodeBlendSpace1D_105eb")
nodes/Climbing/position = Vector2(-860, 1080)
nodes/OpenDoor/node = SubResource("AnimationNodeOneShot_jlw5x")
nodes/OpenDoor/position = Vector2(960, -180)
nodes/State/node = SubResource("AnimationNodeTransition_t1qpm")
nodes/State/position = Vector2(-380, -40)
"nodes/TimeScale Climbing/node" = SubResource("AnimationNodeTimeScale_ly6k1")
"nodes/TimeScale Climbing/position" = Vector2(-640, 1080)
"nodes/TimeScale Crouch/node" = SubResource("AnimationNodeTimeScale_iy0an")
"nodes/TimeScale Crouch/position" = Vector2(-630, 770)
"nodes/TimeScale In Place/node" = SubResource("AnimationNodeTimeScale_u5c7k")
"nodes/TimeScale In Place/position" = Vector2(-700, -160)
"nodes/TimeScale Run/node" = SubResource("AnimationNodeTimeScale_63khx")
"nodes/TimeScale Run/position" = Vector2(-700, 200)
"nodes/TimeScale Walk/node" = SubResource("AnimationNodeTimeScale_lgwli")
"nodes/TimeScale Walk/position" = Vector2(-700, 20)
nodes/TimeScaleOpenDoor/node = SubResource("AnimationNodeTimeScale_4yhe2")
nodes/TimeScaleOpenDoor/position = Vector2(520, -250)
nodes/crouch_blend/node = SubResource("AnimationNodeBlendSpace1D_ue1hl")
nodes/crouch_blend/position = Vector2(-860, 800)
nodes/hard_land_anim/node = SubResource("AnimationNodeAnimation_dpkmr")
nodes/hard_land_anim/position = Vector2(240, 770)
"nodes/TimeScale Land/node" = SubResource("AnimationNodeTimeScale_61lqt")
"nodes/TimeScale Land/position" = Vector2(35.163788, 490.562)
nodes/in_place_blend/node = SubResource("AnimationNodeBlendSpace1D_ftpw8")
nodes/in_place_blend/position = Vector2(-930, -130)
nodes/land_anim/node = SubResource("AnimationNodeAnimation_105eb")
nodes/land_anim/position = Vector2(-380, 470)
nodes/landed/node = SubResource("AnimationNodeOneShot_yplme")
nodes/landed/position = Vector2(250, 330)
nodes/landed_hard/node = SubResource("AnimationNodeOneShot_2swil")
nodes/landed_hard/position = Vector2(700, 400)
nodes/on_air_anim/node = SubResource("AnimationNodeAnimation_ikmx2")
nodes/on_air_anim/position = Vector2(-890, 490)
nodes/rise_on_top/node = SubResource("AnimationNodeOneShot_7qmds")
nodes/rise_on_top/position = Vector2(1510, -80)
nodes/rise_on_top_anim/node = SubResource("AnimationNodeAnimation_ly6k1")
nodes/rise_on_top_anim/position = Vector2(880, 470)
nodes/rise_on_top_anim_scale/node = SubResource("AnimationNodeTimeScale_hagjg")
nodes/rise_on_top_anim_scale/position = Vector2(1290, 380)
nodes/run_blend/node = SubResource("AnimationNodeBlendSpace2D_o3oay")
nodes/run_blend/position = Vector2(-980, 230)
nodes/walk_blend/node = SubResource("AnimationNodeBlendSpace2D_d5vtv")
nodes/walk_blend/position = Vector2(-1210, 50)
node_connections = [&"output", 0, &"rise_on_top", &"OpenDoor", 0, &"landed_hard", &"OpenDoor", 1, &"TimeScaleOpenDoor", &"State", 0, &"TimeScale In Place", &"State", 1, &"TimeScale Walk", &"State", 2, &"TimeScale Run", &"State", 3, &"on_air_anim", &"State", 4, &"TimeScale Crouch", &"State", 5, &"TimeScale Climbing", &"TimeScale Climbing", 0, &"Climbing", &"TimeScale Crouch", 0, &"crouch_blend", &"TimeScale In Place", 0, &"in_place_blend", &"TimeScale Run", 0, &"run_blend", &"TimeScale Walk", 0, &"walk_blend", &"TimeScaleOpenDoor", 0, &"Animation", &"TimeScale Land", 0, &"land_anim", &"landed", 0, &"State", &"landed", 1, &"TimeScale Land", &"landed_hard", 0, &"landed", &"landed_hard", 1, &"hard_land_anim", &"rise_on_top", 0, &"OpenDoor", &"rise_on_top", 1, &"rise_on_top_anim_scale", &"rise_on_top_anim_scale", 0, &"rise_on_top_anim"]

[node name="Character" type="CharacterBody3D" unique_id=168379873]
script = ExtResource("1_md32d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=563458329]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)
shape = SubResource("CapsuleShape3D_yigcl")

[node name="Model" type="Node3D" parent="." unique_id=1110322872]

[node name="y-bot" parent="Model" unique_id=352984466 instance=ExtResource("2_61lqt")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="x-bot" parent="Model" unique_id=669684124 instance=ExtResource("3_2xw3j")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=738445768]
root_node = NodePath("../Model/y-bot")
libraries/AnimationLibrary_Godot_Standard = ExtResource("4_qtv00")
libraries/mixamo-basic-locomotion = ExtResource("5_dnd5e")
libraries/mixamo-climb-hang = ExtResource("6_i35f6")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=2086630704]
root_node = NodePath("../Model/y-bot")
tree_root = SubResource("AnimationNodeBlendTree_k3gqr")
anim_player = NodePath("../AnimationPlayer")
parameters/Climbing/blend_position = 0.0
parameters/OpenDoor/active = false
parameters/OpenDoor/internal_active = false
parameters/OpenDoor/request = 0
parameters/State/current_state = "idle_state"
parameters/State/transition_request = ""
parameters/State/current_index = 0
"parameters/TimeScale Climbing/scale" = 1.0
"parameters/TimeScale Crouch/scale" = 1.0
"parameters/TimeScale In Place/scale" = 1.0
"parameters/TimeScale Run/scale" = 1.0
"parameters/TimeScale Walk/scale" = 1.0
parameters/TimeScaleOpenDoor/scale = 1.0
parameters/crouch_blend/blend_position = 0.0
"parameters/TimeScale Land/scale" = 1.5
parameters/in_place_blend/blend_position = -0.9951338
parameters/landed/active = false
parameters/landed/internal_active = false
parameters/landed/request = 0
parameters/landed_hard/active = false
parameters/landed_hard/internal_active = false
parameters/landed_hard/request = 0
parameters/rise_on_top/active = false
parameters/rise_on_top/internal_active = false
parameters/rise_on_top/request = 0
parameters/rise_on_top_anim_scale/scale = 1.0
parameters/run_blend/blend_position = Vector2(-0.00402683, 0.012987018)
parameters/walk_blend/blend_position = Vector2(-0.0026845932, 0.004328966)

[node name="InteractLabel" type="Label" parent="." unique_id=1024415155]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -25.0
offset_right = 38.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
text = "Open"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputController" type="Node" parent="." unique_id=1357856030]
script = ExtResource("8_56epr")
metadata/_custom_type_script = "uid://dbkpemnstw6yw"

[node name="AnimationController" type="Node" parent="." unique_id=1550889280]
script = ExtResource("9_0cp26")
metadata/_custom_type_script = "uid://bkvfeu81k76ui"

[node name="InteractionController" type="Node" parent="." unique_id=1954464297]
script = ExtResource("9_hwv1k")
metadata/_custom_type_script = "uid://cexyexcdm444k"
